--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^7.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
