--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/messaging": "^21.7.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-fs": "^2.20.0",
-    "react-native-image-picker": "^7.2.3"
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
